--- a/src/features/key-stats/components/KeyStats.css
+++ b/src/features/key-stats/components/KeyStats.css
@@ -1,4 +1,7 @@
 /* Key stats */
+.key-stats > h1.title {
+  margin-bottom: 0;
+}
 .key-stats__wrapper {
   column-count: 2;
   column-gap: 50px;
@@ -10,6 +13,7 @@
 }
 
 .key-stats__table td {
+  font-size: 14px;
   padding: 15px 0;
   border-bottom: 1px solid rgb(52, 67, 109);
 }
