--- a/src/features/stock-ticker/components/StockTicker.css
+++ b/src/features/stock-ticker/components/StockTicker.css
@@ -85,3 +85,9 @@
 .change-positive.quotes__percentage-sign::before {
   background-color: var(--green-color);
 }
+
+@media only screen and (max-width: 590px) {
+  .quotes__stock-price {
+    font-size: 30px;
+  }
+}
