--- a/src/features/key-stats/components/KeyStats.css
+++ b/src/features/key-stats/components/KeyStats.css
@@ -26,7 +26,12 @@
   text-align: right;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 750px) {
+  .key-stats__wrapper {
+    column-gap: 40px;
+  }
+}
+@media only screen and (max-width: 560px) {
   .key-stats__wrapper {
     column-count: 1;
   }
