--- a/src/features/loading/components/Loading.css
+++ b/src/features/loading/components/Loading.css
@@ -6,8 +6,5 @@
   height: 50px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: auto;
 }
