--- a/src/features/footer/components/Footer.css
+++ b/src/features/footer/components/Footer.css
@@ -5,6 +5,9 @@
   grid-row: 2;
   grid-template-columns: 1fr 1fr;
   flex: 0 0 auto;
+  /* position: fixed;
+  bottom: 0;
+  width: 100%; */
 }
 
 .footer__items {
