Removal of empty strings

--- a/src/features/market-status/components/MarketStatus.css
+++ b/src/features/market-status/components/MarketStatus.css
@@ -24,6 +24,7 @@
   top: 0px;
   font-size: 14px;
   color: #ffbb5e;
+  padding-right: 3px;
 }
 
 .market span.market---sun {
@@ -37,4 +38,5 @@
   top: 0px;
   font-size: 14px;
   color: rgb(224, 251, 0);
+  padding-right: 3px;
 }
